[workspace]
members = [
    "alt-core",
]

[package]
name = "alterrain-rs"
version = "0.1.0"
authors = ["xuyanwen2012 <info@chivalrystudio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Alterrain crates
alt-core = {path = "./alt-core"}

hyper = "0.13.5"
tokio = { version = "0.2", features = ["full"] }

# Others
rand = "0.7.3"
env_logger = "0.7.1"
serde = "1.0.105"
serde_json = "1.0.48"